# Golish-Platform

./: .cursorrules  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  execution-plan-tdd.md  index-index-Bg1R1mAJ.js  index.html  justfile  nmap_scan.txt  package-lock.json  package.json  pnpm-lock.yaml  release-please-config.json  vite.config.ts  vitest.config.ts
backend/: Cargo.toml
backend/crates/golish/: Cargo.toml  collect_js.sh  download_manifest.py  extract_scripts.cjs  probe_manifest.cjs  recursive_vite.sh  recursive_vite_compat.sh  recursive_vite_final.sh  recursive_vite_fixed.sh  recursive_vite_fixed2.sh  target_headers.txt  target_page.html  tauri.conf.json  vite_manifest.json
backend/crates/golish-ai/: Cargo.toml
backend/crates/golish-ai/src/: agent_bridge.rs  agentic_loop.rs  bridge_context.rs  bridge_hitl.rs  bridge_policy.rs  bridge_session.rs  codex_prompt.rs  db_tracking.rs  eval_support.rs  event_coordinator.rs  execution_mode.rs  lib.rs  llm_client.rs  memory_file.rs  memory_gatekeeper.rs  pentest_hook.rs  prompt_registry.rs  summarizer.rs  system_prompt.rs  test_utils.rs  test_utils_tests.rs  tool_definitions.rs  tool_execution.rs  tool_executors.rs  tool_provider_impl.rs  transcript.rs
backend/crates/golish-artifacts/: Cargo.toml
backend/crates/golish-artifacts/src/: generators.rs  lib.rs  manager.rs  prompts.rs  synthesis.rs  tests.rs
backend/crates/golish-benchmarks/: Cargo.toml
backend/crates/golish-benchmarks/src/: lib.rs
backend/crates/golish-context/: Cargo.toml
backend/crates/golish-context/src/: context_manager.rs  lib.rs  token_trunc.rs
backend/crates/golish-core/: Cargo.toml
backend/crates/golish-core/src/: events.rs  jsonl.rs  lib.rs  os.rs  paths.rs  plan.rs  prompt.rs  runtime.rs  tool_name.rs  utils.rs
backend/crates/golish-db/: Cargo.toml
backend/crates/golish-db/migrations/: 20260408000001_initial.sql  20260408000002_recordings.sql  20260409000001_enhance_memories.sql  20260409000002_target_status.sql  20260409000003_operation_source.sql  20260411000001_enable_pgvector.sql  20260412000001_frontend_conversations.sql  20260412000002_extend_agent_type.sql  20260412000003_execution_plans.sql  20260412100001_scan_queue_and_custom_rules.sql  20260412200001_vault_credential_status.sql  20260413000001_target_recon_extend.sql  20260413000002_target_unique_value.sql  20260413000003_terminal_plan_json.sql  20260415000001_wiki_knowledge_base.sql  20260415000002_kb_research_log.sql  20260415000003_vuln_scan_history.sql  20260415000004_chat_msg_tool_call_offsets.sql  20260415100001_extend_audit_log.sql  20260415100002_security_analysis.sql  20260415200001_file_storage_paths.sql  20260415200002_passive_scan_nullable_target.sql  20260415200003_extend_vuln_kb_pocs.sql  20260416000001_wiki_page_refs_changelog.sql  20260416100001_repair_audit_log_columns.sql  20260418000001_sensitive_scan.sql  20260418100001_standardize_fields.sql  20260418100002_logs_project_path.sql  20260418200001_poc_dedup_constraint.sql  20260419000001_backfill_fingerprints.sql  20260422000001_upgrade_bytea_to_vector.sql  20260422000002_ensure_task_tables.sql  20260423000001_terminal_execution_mode.sql  20260423000002_terminal_plan_message_id.sql  20260423000003_observability_tables.sql  20260423000004_prompt_templates.sql  20260427000001_graph_knowledge_base.sql
backend/crates/golish-db/src/: config.rs  embedded.rs  embeddings.rs  gatekeeper.rs  lib.rs  models.rs  pool.rs  ready_gate.rs
backend/crates/golish-evals/: Cargo.toml
backend/crates/golish-evals/src/: config.rs  executor.rs  lib.rs  runner.rs
backend/crates/golish-graphiti/: Cargo.toml
backend/crates/golish-graphiti/src/: client.rs  error.rs  lib.rs  types.rs
backend/crates/golish-json-repair/: Cargo.toml
backend/crates/golish-llm-providers/: Cargo.toml
backend/crates/golish-llm-providers/src/: lib.rs  model_capabilities.rs  provider_trait.rs  reasoning_models.rs
backend/crates/golish-mcp/: Cargo.toml
backend/crates/golish-mcp/src/: client.rs  lib.rs  loader.rs
backend/crates/golish-models/: Cargo.toml
backend/crates/golish-models/src/: lib.rs  providers.rs  registry.rs
backend/crates/golish-pentest/: Cargo.toml
backend/crates/golish-pentest-mcp/: Cargo.toml
backend/crates/golish-pentest-mcp/src/: builder.rs  discovery.rs  main.rs  models.rs  server.rs
backend/crates/golish-pentest/src/: command_builder.rs  config.rs  github.rs  handlers.rs  lib.rs  models.rs  output_parser.rs  output_store.rs  platform.rs  process_manager.rs  sandbox.rs  scanner.rs  search.rs  terminal.rs  tool_manager.rs  tool_package.rs  versions.rs
backend/crates/golish-pty/: Cargo.toml
backend/crates/golish-pty/src/: lib.rs  manager.rs  parser.rs  shell.rs
backend/crates/golish-session/: Cargo.toml
backend/crates/golish-session/src/: archive.rs  db.rs  lib.rs  manager.rs  tests.rs  types.rs
backend/crates/golish-settings/: Cargo.toml
backend/crates/golish-settings/src/: lib.rs  loader.rs  project.rs  schema.rs  template.toml
backend/crates/golish-shell-exec/: Cargo.toml
backend/crates/golish-shell-exec/src/: common.rs  lib.rs  process_group.rs  shell.rs  streaming.rs  tests.rs  tool.rs
backend/crates/golish-sidecar/: Cargo.toml
backend/crates/golish-sidecar/src/: capture.rs  commits.rs  config.rs  events.rs  lib.rs  processor.rs  session.rs  state.rs
backend/crates/golish-skills/: Cargo.toml
backend/crates/golish-skills/src/: discovery.rs  lib.rs  types.rs
backend/crates/golish-sub-agents/: Cargo.toml
backend/crates/golish-sub-agents/prompts/: adviser.tera  analyzer.tera  coder.tera  explorer.tera  generator.tera  memorist.tera  mentor.tera  pentester.tera  (+10 more)
backend/crates/golish-swebench/: Cargo.toml
backend/crates/golish-synthesis/: Cargo.toml
backend/crates/golish-tools/: Cargo.toml
backend/crates/golish-udiff/: Cargo.toml
backend/crates/golish-web/: Cargo.toml
backend/crates/golish-workflow/: Cargo.toml
backend/crates/qbit/: Cargo.toml  tauri.conf.json
backend/crates/rig-openai-responses/: Cargo.toml  PLAN.md
backend/crates/rig-zai-sdk/: Cargo.toml
(+1199 files in other folders)
