[package]
name = "golish-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PostgreSQL-backed persistence layer for Golish platform"

[dependencies]
golish-core = { workspace = true }

# Async SQL toolkit with compile-time checked queries
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Embedded PostgreSQL server (downloads & manages PG binaries)
pg-embed = { version = "1", features = ["rt_tokio"] }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# HTTP client (for embedding API calls)
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"

# Utilities
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
tracing.workspace = true
base64.workspace = true

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace = true
