[package]
name = "golish-models"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Model registry and definitions for Golish LLM providers"

[dependencies]
# Settings (for AiProvider enum)
golish-settings = { workspace = true }

# Serialization
serde = { workspace = true }

# TypeScript type generation
ts-rs = { workspace = true }

# For LazyLock
once_cell = "1.21"
