[package]
name = "golish-pty"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "PTY and terminal management for Golish"

[dependencies]
# Foundation crates
golish-core = { workspace = true }
golish-settings = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# PTY support
portable-pty = { workspace = true }
vte = { version = "0.13" }

# Concurrency
parking_lot = { version = "0.12" }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
tracing = { version = "0.1" }
dirs = { workspace = true }
itoa = { version = "1.0" }

# Error handling
thiserror = { version = "2.0" }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = []
