[package]
name = "golish-session"
version.workspace = true
edition.workspace = true
description = "Session persistence and message history for Golish AI conversations"

[dependencies]
golish-core = { workspace = true }
rig-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
tauri = []
