[package]
name = "golish-web"
version.workspace = true
edition.workspace = true
description = "Web search and content fetching for Golish AI"

[dependencies]
# Foundation crate
golish-core = { workspace = true }

# Async
async-trait = { workspace = true }

# HTTP and parsing
reqwest = { workspace = true }
serde_json = { workspace = true }
readability = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
