[package]
name = "golish"
version.workspace = true
description = "AI-powered terminal emulator"
authors.workspace = true
edition.workspace = true
default-run = "golish"

[lib]
name = "golish_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "golish"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Foundation crate (zero internal dependencies)
golish-core = { path = "../golish-core" }

# Infrastructure crates
golish-settings = { path = "../golish-settings" }
golish-models = { path = "../golish-models" }
golish-tools = { path = "../golish-tools" }
golish-pty = { path = "../golish-pty" }
golish-sidecar = { path = "../golish-sidecar" }
golish-context = { path = "../golish-context" }
golish-session = { path = "../golish-session" }
golish-artifacts = { path = "../golish-artifacts" }
golish-llm-providers = { path = "../golish-llm-providers" }
golish-synthesis = { path = "../golish-synthesis" }
golish-skills = { path = "../golish-skills" }
golish-mcp = { path = "../golish-mcp" }
golish-pentest = { path = "../golish-pentest" }
golish-db = { path = "../golish-db" }

# Domain crate
golish-ai = { path = "../golish-ai" }

# Tauri (for GUI app)
tauri = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-notification = { workspace = true }

# CLI dependencies (for headless mode)
clap = { workspace = true }
atty = { workspace = true }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
url.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
base64.workspace = true
sha2.workspace = true
reqwest.workspace = true
zip.workspace = true
walkdir.workspace = true
regex = "1"
quick-xml = { workspace = true }
sqlx = { workspace = true }

# OpenTelemetry for Langfuse tracing
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry-langfuse.workspace = true

futures.workspace = true
dotenvy.workspace = true

rig-core.workspace = true

# Evals framework (optional - only for evals feature)
golish-evals = { path = "../golish-evals", optional = true }
golish-benchmarks = { path = "../golish-benchmarks", optional = true }
golish-swebench = { path = "../golish-swebench", optional = true }

# Graph-based workflow execution for multi-agent systems
graph-flow.workspace = true
async-trait.workspace = true

# File walking with gitignore support
ignore.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true


# Fuzzy matching for path completions
nucleo-matcher = "0.3"

# TOML settings file support
toml.workspace = true

# File locking (for history)
fs2 = "0.4"

# TLS crypto provider (required for rustls 0.23+)
rustls.workspace = true

[features]
default = []
# Evaluation framework using rig::evals
evals = ["dep:golish-evals", "dep:golish-benchmarks", "dep:golish-swebench"]

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
serial_test.workspace = true
insta = { version = "1.34", features = ["json"] }
